# project_5

./: .env.example  Dockerfile  README.md  coverage.txt  docker-compose.yml  materials.json  moders_groups.json  pyproject.toml  user_payment.json
config/: celery.py  settings.py
materials/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_link_to_video.py  0003_lesson_owner_well_owner.py  0004_subscription.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_payment_link_payment_session_id.py
